--- a/ejemplos/AdaptadorPersonalizado/app/src/main/res/layout/disco_row.xml
+++ b/ejemplos/AdaptadorPersonalizado/app/src/main/res/layout/disco_row.xml
@@ -35,4 +35,14 @@
         android:id="@+id/artistaTextView"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:textSize="20sp"
+        android:text="$20.00"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:id="@+id/precioTextView"/>
+
 </RelativeLayout>
